# Dota2Corpus

./: README.md  players_info.csv  players_info_hepa.csv  pyproject.toml  requirements.txt  t.csv
app/: api_functions.py  chat_analysis.py  graphics.py  main.py  match_ids.json  plots.py  structs.py  toxicity_analysis.py  toxicity_analysis_df.py  toxity_analysis.py
app/constants/: chat_wheel.json  countries.json  heroes.json  patch.json
backups/: players_info_all.csv  players_info_hepa.csv  players_info_leter.csv  players_info_m.csv  unite_df.py
path/to/venv./: pyvenv.cfg
src/dota2corpus/: __init__.py
